# dfa-rl

./: .gitignore  README.md  pyproject.toml
dfas/: fourstates.dot  tenstates.dot
notebooks/: 01_playground.ipynb
src/dfa_rl/: dfa.py  dfa_agent.py  dfa_env.py  dqn_train.py  plotter.py  qnet.py
