[project]
name = "dfa-rl"
version = "0.1.0"
description = ""
authors = [
    {name = "Yuji Sakabe",email = "eyujis@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ipykernel = "^6.30.1"
black = "^25.1.0"
isort = "^6.0.1"
pytest = "^8.4.1"

