[tool.poetry]
name = "dfa-rl"
version = "0.1.0"
description = "Finite automata with reinforcement learning experiments"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "dfa_rl", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
numpy = "^2.0"
pydot = "^4.0.1"
torch = "^2.8.0"
matplotlib = "^3.10.6"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.29.0"
black = "^24.0"
isort = "^5.13.0"
pytest = "^8.0"
